<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_account_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main"
    tools:context=".MyAccountActivity">

    <TableLayout
...
                android:background="@android:color/holo_orange_dark"
                android:contentDescription="@string/icon"
                android:gravity="center"
                app:srcCompat="@drawable/gold" />

            <TextView
                android:id="@+id/goldNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="@string/zero_num"
...
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/shil"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/localSHIL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/zero" />
...
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/dolr"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/localDOLR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/zero" />
...
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/foreignPENY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_orange_light"
                android:gravity="center"
                android:text="@string/zero" />
...
